--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Friend Finder</title>
   <link rel="stylesheet" href="./css/style.css">
+  <script src="./javascript/main.js" defer></script>
+  <!-- Jquery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,14 +21,22 @@
     <div class="jumbotron welcomHead">
       <div class="welcomContent">
         <h1 class="display-4 welcomContent">Hello, world!</h1>
-        <p class="lead welcomContent">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+        <p class="lead welcomContent">This is a simple hero unit, a simple jumbotron-style component for calling extra
+          attention to
           featured content or information.</p>
         <hr class="my-4 welcomContent">
-        <p class="welcomContent">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p class="welcomContent">It uses utility classes for typography and spacing to space content out within the
+          larger container.</p>
         <p class="lead welcomContent">
           <a class="btn btn-primary btn-lg welcomContent" href="./survey.html" role="button">Find Your Best Match</a>
         </p>
       </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-6"><button type="button" id="apiResponse" class="btn btn-secondary">API response</button></div>
+      <div class="col-6"><button type="button" class="btn btn-secondary float-right"> <a style="color:white" href="https://github.com/Atom1er/FriendFinder">GitHub Repo</a></button></div>
     </div>
   </div>
 </body>
